k8s/infrastructure/ssh-server/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-server
  namespace: default
spec:
  template:
    spec:
      containers:
      - name: ssh-server
        image: lscr.io/linuxserver/openssh-server:latest
        ports:
        - containerPort: 2222
          name: ssh
