k8s/infrastructure/ssh-server/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-server
  namespace: default
spec:
  ports:
  - name: ssh
    port: 2222
    targetPort: ssh
